--- a/Eventos_Web/index.html
+++ b/Eventos_Web/index.html
@@ -23,7 +23,7 @@
         <div class="menu">
           <ul class="list">
             <li><a href="../index.html">Inicio</a></li>
-            <li><a href="pag/eventos.html">Eventos</a></li>
+            <li><a href="pag/eventoslogin.html">Eventos</a></li>
             <li><a href="pag/info.html">Info.</a></li>
           </ul>
         </div>
@@ -33,7 +33,7 @@
             <div class="Banner-Titulo">
                 <div>
                     <h1>Sumérgete en la diversión con los mejores eventos en República Dominicana.</h1>
-                    <button class="whatsapp-btn"></i> Agendar evento hoy!</button>
+                    <button class="whatsapp-btn" onclick="goToLogin()"></i> Agendar evento hoy!</button>
                 </div>
             </div>
         </div>
@@ -72,10 +72,26 @@
         <div class="label">tickets vendidos</div>
       </div>
     </section>
+
+    <section class="collage">
+      <img src="https://images.unsplash.com/photo-1531058020387-3be344556be6?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="Imagen 1">
+      <img src="https://images.unsplash.com/photo-1632054553195-bfd7034fee25?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="Imagen 2">
+      <img src="https://images.unsplash.com/photo-1515168833906-d2a3b82b302a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="Imagen 3">
+
+      <img src="https://images.unsplash.com/photo-1530014671970-707f86eb10f5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="Imagen 1">
+      <img src="https://plus.unsplash.com/premium_photo-1683134703974-3603f427e988?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80" alt="Imagen 2">
+      <img src="https://images.unsplash.com/photo-1616836641508-3486b884a259?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1171&q=80" alt="Imagen 3">
+
+    </section>
   
    
     <footer class="footer-final">
         <span>Copyright © 2023 by Play Events | Privacy Policy </span>
     </footer>
+    <script>
+      function goToLogin() {
+          window.location.href = "pag/eventoslogin.html";
+      }
+  </script>
 </body>
 </html>
