--- a/Eventos_Web/pag/eventos.html
+++ b/Eventos_Web/pag/eventos.html
@@ -39,5 +39,16 @@
       <footer class="footer-final">
           <span>Copyright © 2023 by Play Events | Privacy Policy </span>
       </footer>
+      <div id="modal" class="modal">
+        <div class="modal-content">
+          
+          <input type="number" id="cantidadBoletas" min="1" max="10" value="1">
+          <button id="realizarCompra">Realizar Compra</button>
+        </div>
+
+      
 </body>
+
+
+</div>
 </html>
