--- a/Eventos_Web/pag/info.html
+++ b/Eventos_Web/pag/info.html
@@ -20,7 +20,7 @@
         <div class="menu">
           <ul class="list">
             <li><a href="../index.html">Inicio</a></li>
-            <li><a href="eventos.html">Eventos</a></li>
+            <li><a href="eventoslogin.html">Eventos</a></li>
             <li><a href="info.html">Info.</a></li>
           </ul>
         </div>
